# sortient-material-vision-opensource

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/wiki/: Architecture.md  Overview.md  ResearchRoadmap.md
examples/configs/: default.yaml
material_vision_ai/: __init__.py  cli.py
material_vision_ai/analytics/: __init__.py  dashboard.py  monitoring.py
material_vision_ai/catalog/: __init__.py  database.py  registry.py
material_vision_ai/data/: __init__.py  augmentations.py  dataset.py  loader.py  synthetic.py
material_vision_ai/evaluation/: __init__.py  metrics.py  report.py
material_vision_ai/inference/: __init__.py  pipeline.py  serving.py
material_vision_ai/models/: __init__.py  backbones.py  multispectral_classifier.py  registry.py
material_vision_ai/sensors/: __init__.py  calibration.py  sensor_models.py
material_vision_ai/training/: __init__.py  callbacks.py  schedulers.py  trainer.py
material_vision_ai/utils/: __init__.py  config.py  logging.py
material_vision_ai/visualization/: __init__.py  spectral_plot.py
scripts/: generate_synthetic_dataset.py
tests/: conftest.py  test_analytics.py  test_catalog.py  test_data_pipeline.py  test_training_and_inference.py  test_utils.py
